--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.taobao.ju</groupId>
+    <parent>
+        <groupId>com.taobao.ju</groupId>
+        <artifactId>location</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>location-core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
