--- a/core/pom.xml
+++ b/core/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-beans</artifactId>
             <version>3.2.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>3.2.7.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>com.google.guava</groupId>
